v0.6 WIP: rebuild the first-person line origin from the hand pass
- Place the line origin on the pixel where the hand pass draws the rod's
  attachment point: aspect ratio, hand and world FOV (world FOV from the
  extracted projection), equip dip, swing, sway, view bob, hurt tilt,
  nausea/portal warp, smoothed eye height
- Measure the rod tip of resource packs that redraw it (Faithful 32x)
- Hide the line of a hook whose rod left its owner's hands, only for
  hooks cast from a rod (MC-310980, MC-211561)
- Keep the correction with the HUD hidden (F1); HandPass tracks whether
  the hand pass drew a hand and samples the F1 gate
- Drop the Fabric API dependency; mod_version 0.6
- Docs: CLAUDE.md, port-version skill (smoke test with countInjections,
  per-version table, step-by-step manual walkthrough); README, LICENSE,
  screenshots

Not a release commit: more changes are planned before v0.6 ships.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>